<resources>
    <string name="AD">Andorra</string>
    <string name="AE">United Arab Emirates</string>
    <string name="AF">Afghanistan</string>
    <string name="AG">Antigua and Barbuda</string>
    <string name="AI">Anguilla</string>
    <string name="AL">Albania</string>
    <string name="AM">Armenia</string>
    <string name="AO">Angola</string>
    <string name="AR">Argentina</string>
    <string name="AS">American Samoa</string>
    <string name="AT">Austria</string>
    <string name="AU">Australia</string>
    <string name="AW">Aruba</string>
    <string name="AZ">Azerbaijan</string>
    <string name="BA">Bosnia and Hercegovina</string>
    <string name="BB">Barbados</string>
    <string name="BD">Bangladesh</string>
    <string name="BE">Belgium</string>
    <string name="BF">Burkina Faso</string>
    <string name="BG">Bulgaria</string>
    <string name="BH">Bahrain</string>
    <string name="BI">Burundi</string>
    <string name="BJ">Benin</string>
    <string name="BM">Bermuda</string>
    <string name="BN">Brunei Darussalm</string>
    <string name="BO">Bolivia</string>
    <string name="BR">Brazil</string>
    <string name="BS">Bahamas</string>
    <string name="BT">Bhutan</string>
    <string name="BW">Botswana</string>
    <string name="BY">Belarus</string>
    <string name="BZ">Belize</string>
    <string name="CA">Canada</string>
    <string name="CD">Congo (Kinshasa)</string>
    <string name="CF">Central African Republic</string>
    <string name="CG">Congo (Brazzaville)</string>
    <string name="CH">Switzerland</string>
    <string name="CI">Ivory Coast</string>
    <string name="CK">Cook Islands</string>
    <string name="CL">Chile</string>
    <string name="CM">Cameroon</string>
    <string name="CN">China</string>
    <string name="CO">Colombia</string>
    <string name="CR">Costa Rica</string>
    <string name="CU">Cuba</string>
    <string name="CV">Cape Verde</string>
    <string name="CY">Cyprus</string>
    <string name="CZ">Czech Republic</string>
    <string name="DE">Germany</string>
    <string name="DJ">Djibouti</string>
    <string name="DK">Denmark</string>
    <string name="DM">Dominica</string>
    <string name="DO">Dominican Republic</string>
    <string name="DZ">Algeria</string>
    <string name="EC">Ecuador</string>
    <string name="EE">Estonia</string>
    <string name="EG">Egypt</string>
    <string name="ER">Eritrea</string>
    <string name="ES">Spain</string>
    <string name="ET">Ethiopia</string>
    <string name="FI">Finland</string>
    <string name="FJ">Fiji Islands</string>
    <string name="FK">Falkland Islands</string>
    <string name="FM">Micronesia</string>
    <string name="FO">Faroe Islands</string>
    <string name="FR">France</string>
    <string name="GA">Gabon</string>
    <string name="GB">United Kingdom</string>
    <string name="GD">Grenada/Carricou</string>
    <string name="GE">Georgia</string>
    <string name="GF">French Guiana</string>
    <string name="GH">Ghana</string>
    <string name="GI">Gibraltar</string>
    <string name="GL">Greenland</string>
    <string name="GM">Gambia</string>
    <string name="GN">Guinea</string>
    <string name="GQ">Equatorial Guinea</string>
    <string name="GR">Greece</string>
    <string name="GT">Guatemala</string>
    <string name="GU">Guam</string>
    <string name="GW">Guinea-Bissau</string>
    <string name="GY">Guyana</string>
    <string name="HK">Hong Kong</string>
    <string name="HN">Honduras</string>
    <string name="HR">Croatia</string>
    <string name="HT">Haiti</string>
    <string name="HU">Hungary</string>
    <string name="ID">Indonesia</string>
    <string name="IE">Ireland</string>
    <string name="IL">Israel</string>
    <string name="IN">India</string>
    <string name="IQ">Iraq</string>
    <string name="IR">Iran</string>
    <string name="IS">Iceland</string>
    <string name="IT">Italy</string>
    <string name="JM">Jamaica</string>
    <string name="JO">Jordan</string>
    <string name="JP">Japan</string>
    <string name="KE">Kenya</string>
    <string name="KG">Kyrgyz Republic</string>
    <string name="KH">Cambodia</string>
    <string name="KI">Kiribati</string>
    <string name="KM">Comoros and Mayotte</string>
    <string name="KN">St Kitts and Nevis</string>
    <string name="KP">North Korea</string>
    <string name="KR">South Korea</string>
    <string name="KW">Kuwait</string>
    <string name="KY">Cayman Islands</string>
    <string name="KZ">Kazakhstan</string>
    <string name="LA">Laos</string>
    <string name="LB">Lebanon</string>
    <string name="LC">St Lucia</string>
    <string name="LI">Liechtenstein</string>
    <string name="LK">Sri Lanka</string>
    <string name="LR">Liberia</string>
    <string name="LS">Lesoth</string>
    <string name="LT">Lithuania</string>
    <string name="LU">Luxembourg</string>
    <string name="LV">Latvia</string>
    <string name="LY">Libya</string>
    <string name="MA">Morocco</string>
    <string name="MC">Monaco</string>
    <string name="MD">Moldova</string>
    <string name="ME">Montenegro</string>
    <string name="MG">Madagascar</string>
    <string name="MH">Marshall Islands</string>
    <string name="MK">Macedonia</string>
    <string name="ML">Mali</string>
    <string name="MM">Burma (Myanmar)</string>
    <string name="MN">Mongolia</string>
    <string name="MO">Macao</string>
    <string name="MP">Northern Marianas</string>
    <string name="MQ">Martinique</string>
    <string name="MR">Mauritania</string>
    <string name="MS">Montserrat</string>
    <string name="MT">Malta</string>
    <string name="MU">Mauritius</string>
    <string name="MV">Maldives</string>
    <string name="MW">Malawi</string>
    <string name="MX">Mexico</string>
    <string name="MY">Malaysia</string>
    <string name="MZ">Mozambique</string>
    <string name="NA">Namibia</string>
    <string name="NC">New Caledonia</string>
    <string name="NE">Niger</string>
    <string name="NG">Nigeria</string>
    <string name="NI">Nicaragua</string>
    <string name="NL">Netherlands</string>
    <string name="NO">Norway</string>
    <string name="NP">Nepal</string>
    <string name="NR">Nauru</string>
    <string name="NU">Niue Island</string>
    <string name="NZ">New Zealand</string>
    <string name="OM">Oman</string>
    <string name="PA">Panama</string>
    <string name="PE">Peru</string>
    <string name="PF">French Polynesia</string>
    <string name="PG">Papua New Guinea</string>
    <string name="PH">Philippines</string>
    <string name="PK">Pakistan</string>
    <string name="PL">Poland</string>
    <string name="PM">St Pierre and Miquelon</string>
    <string name="PR">Puerto Rico</string>
    <string name="PS">Palestine</string>
    <string name="PT">Portugal</string>
    <string name="PW">Palau</string>
    <string name="PY">Paraguay</string>
    <string name="QA">Qatar</string>
    <string name="RE">Reunion</string>
    <string name="RO">Romania</string>
    <string name="RS">Serbia</string>
    <string name="add_picture">Add Picture</string>
    <string name="blank" />
    <string name="broadcast_message">Send Broadcast Message</string>
    <string name="cancel">Cancel</string>
    <string name="channels_search"><i>Search channels</i></string>
    <string name="cloud_directory_service_hint">Required fields. Be sure to enter your real name. Your coworkers can search for you by name, and start BBM chats with you.</string>
    <string name="contact_add_category">Add Category</string>
    <string name="contacts_invite_to_group">Invite to Group</string>
    <string name="contacts_move_contact">Move Contact</string>
    <string name="contacts_view_bbm_profile">View BBM Profile</string>
    <string name="create_channel">Create Channel</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit_owner_profile">Edit Owner Profile</string>
    <string name="file_picker_add_folder">Add Folder</string>
    <string name="file_picker_grid">Grid</string>
    <string name="file_picker_sort">Sort</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="glympse">Glympse</string>
    <string name="group_conversation_slide_menu_clear_chat">Clear Chat</string>
    <string name="group_conversation_slide_menu_copy_chat">Copy Chat</string>
    <string name="group_conversation_slide_menu_email_chat">Email Chat</string>
    <string name="group_like_picture">Like Picture</string>
    <string name="group_save_picture">Save Picture</string>
    <string name="group_settings_admin_password">Administration Password</string>
    <string name="group_settings_administration">Administration</string>
    <string name="group_settings_administrators">Administrators</string>
    <string name="group_settings_allow_invite">Allow Members to Invite Others</string>
    <string name="group_settings_chat_notification">Chat notifications for this group</string>
    <string name="group_settings_create">Create</string>
    <string name="group_settings_general">General</string>
    <string name="group_settings_is_admin_blurb">You are an administrator for this group.</string>
    <string name="group_settings_learnmore_link">Learn more about group administrators</string>
    <string name="group_settings_not_admin_blurb2">To manage this group, contact a group administrator.</string>
    <string name="group_settings_picture_notification">Picture notifications for this group</string>
    <string name="groups_settings_edit">Edit</string>
    <string name="incoming_call_type_voice">BBM Voice</string>
    <string name="introducing_channels_first_part">With BBM, you can connect with fans, friends, and customers in a channel using posts and pictures.</string>
    <string name="introducing_channels_second_part">Your subscribers receive the latest info in BBM and can share their thoughts.</string>
    <string name="introducing_channels_title">Introducing BBM Channels</string>
    <string name="join_channel_menu">Scan to Join</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="menu_chat_invite_more">Invite More</string>
    <string name="menu_end_chat">End Chat</string>
    <string name="menu_history">History</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="overlay_tap_to_continue">Tap to Continue</string>
    <string name="private_chat_menu">Start Private Chat</string>
    <string name="profile_selector_details">Details</string>
    <string name="profile_selector_members">Members</string>
    <string name="profile_selector_updates">Feeds</string>
    <string name="restore_sticker_purchases">Restore</string>
    <string name="search">Search</string>
    <string name="set_as">Set As</string>
    <string name="share">Share</string>
    <string name="share_passphrase_title">Share Passphrase</string>
    <string name="slide_menu_add_event">Add Event</string>
    <string name="slide_menu_add_list">Add List</string>
    <string name="slide_menu_block_chat">Block Chat</string>
    <string name="slide_menu_group_settings">Group Settings</string>
    <string name="slide_menu_invite">Add Contact</string>
    <string name="slide_menu_leave_group">Leave Group</string>
    <string name="slide_menu_new_chat">Start New Chat</string>
    <string name="slide_menu_ping">Ping</string>
    <string name="slide_menu_view_group_profile">View Group Profile</string>
    <string name="start_chat">Start Chat</string>
    <string name="start_meeting">Start BBM Meetings</string>
    <string name="start_multiperson_chat">Start Multiperson Chat</string>
    <string name="sticker_store_details_screen_already_purchased">You purchased this item before. Do you want to install the item again, or restore all of your purchases?</string>
    <string name="sticker_store_details_screen_purchase_install">Install</string>
</resources>