<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_share" android:id="@id/picture_share_menu" android:title="@string/share" app:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_like" android:id="@id/picture_like_menu" android:title="@string/group_like_picture" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_save_picture" android:id="@id/picture_save_menu" android:title="@string/group_save_picture" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_setas" android:id="@id/picture_set_as_menu" android:title="@string/set_as" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_group_settings" android:id="@id/picture_group_settings_menu" android:title="@string/slide_menu_group_settings" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/picture_group_contextual_delete" android:title="@string/delete" app:showAsAction="never" />
</menu>