<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_channels_search" android:id="@id/menu_search_channel" android:title="@string/channels_search" app:showAsAction="always|collapseActionView" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:icon="@drawable/ic_menu_createchannel" android:id="@id/menu_create_channel" android:title="@string/create_channel" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_editprofile" android:id="@id/menu_edit_channel_profile" android:title="@string/edit_owner_profile" app:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_scantojoin" android:id="@id/menu_join_channel" android:title="@string/join_channel_menu" app:showAsAction="never" />
</menu>