<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/first_time_set_avatar_text_size" android:id="@id/first_name_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_group_activity_group_allow_to_invite_margin_top" android:text="@string/first_name" />
        <EditText android:id="@id/first_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/first_name_hint" android:singleLine="true" android:inputType="textNoSuggestions" style="@style/BB10Edit" />
        <TextView android:textSize="@dimen/first_time_set_avatar_text_size" android:id="@id/last_name_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_group_activity_group_allow_to_invite_margin_top" android:text="@string/last_name" />
        <EditText android:id="@id/last_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/last_name_hint" android:singleLine="true" android:inputType="textNoSuggestions" style="@style/BB10Edit" />
        <TextView android:textSize="16.0sp" android:textColor="@color/grey" android:id="@id/description" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cloud_directory_service_hint" />
    </LinearLayout>
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/divider_common" />
    <Button android:textSize="@dimen/first_time_set_avatar_button_text_size" android:id="@id/button_next" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/done" />
</LinearLayout>