<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/groupProfileRoot" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/group_toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/toolbar_groups" />
    <ScrollView android:id="@id/settings_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/group_settings_general" custom:showRightLabel="false" />
            <android.support.v7.widget.SwitchCompat android:id="@id/allow_chat_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements" android:text="@string/group_settings_chat_notification" style="@style/Common.BaliSwitch" />
            <android.support.v7.widget.SwitchCompat android:id="@id/allow_picture_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements" android:text="@string/group_settings_picture_notification" style="@style/Common.BaliSwitch" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/group_settings_administration" custom:showRightLabel="false" />
            <TextView android:id="@id/group_settings_is_admin" android:paddingLeft="@dimen/group_settings_horizontal_padding" android:paddingRight="@dimen/group_settings_horizontal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements" android:text="@string/group_settings_is_admin_blurb" style="@style/Common.Label.Small" />
            <TextView android:textColor="@color/blue" android:id="@id/group_settings_learnmore" android:paddingLeft="@dimen/group_settings_horizontal_padding" android:paddingRight="@dimen/group_settings_horizontal_padding" android:paddingBottom="@dimen/group_settings_learn_more_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_settings_learnmore_link" style="@style/Common.Label.Small" />
            <TextView android:id="@id/group_settings_not_admin" android:paddingLeft="@dimen/group_settings_horizontal_padding" android:paddingRight="@dimen/group_settings_horizontal_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_settings_not_admin_blurb2" style="@style/Common.Label.Small" />
            <android.support.v7.widget.SwitchCompat android:id="@id/allow_members_invite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements" android:text="@string/group_settings_allow_invite" style="@style/Common.BaliSwitch" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/admin_edit" android:paddingLeft="@dimen/group_settings_horizontal_padding" android:paddingRight="@dimen/group_settings_horizontal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements">
                <TextView android:id="@id/admin_edit_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/group_settings_administrators" android:layout_weight="1.0" style="@style/Common.Label.Small" />
                <Button android:textColor="@color/black" android:id="@id/admin_edit_button" android:layout_width="@dimen/group_settings_button_width" android:layout_height="wrap_content" android:text="@string/groups_settings_edit" style="@style/CascadesButton.Narrow" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:id="@id/admin_password" android:paddingLeft="@dimen/group_settings_horizontal_padding" android:paddingRight="@dimen/group_settings_horizontal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_settings_margin_between_elements">
                <TextView android:id="@id/admin_password_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/group_settings_admin_password" android:layout_weight="1.0" style="@style/Common.Label.Small" />
                <Button android:textColor="@color/black" android:id="@id/admin_password_button" android:layout_width="@dimen/group_settings_button_width" android:layout_height="wrap_content" android:text="@string/group_settings_create" style="@style/CascadesButton.Narrow" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>