<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/group_toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/toolbar_groups" />
    <com.bbm.ui.ThreeButtonSegmentedControl android:layout_gravity="center|top" android:id="@id/groupProfileFragmentSelector" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:segmentLeftOption="@string/profile_selector_details" custom:segmentMiddleOption="@string/profile_selector_updates" custom:segmentRightOption="@string/profile_selector_members" />
    <ImageView android:id="@id/groupProfileFragmentDropShadow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/group_profile_drop_shadow_margin_left" android:layout_marginRight="@dimen/group_profile_drop_shadow_margin_right" android:src="@drawable/divider_shadow" android:scaleType="fitXY" android:contentDescription="@string/blank" />
    <FrameLayout android:orientation="vertical" android:id="@id/groupProfileFragmentContainer" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>